--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="cycle_duration">Cycle Duration</string>
     <string name="save">Save</string>
     <string name="welcome">Welcome to Moon Log!</string>
+    <string name="first_day">Week starts on:</string>
 </resources>
