--- a/app/src/main/res/values-la/strings.xml
+++ b/app/src/main/res/values-la/strings.xml
@@ -7,4 +7,6 @@
     <string name="save">Guardar</string>
     <string name="welcome">Bienvenida a Moon Log!</string>
     <string name="first_day">Primer día de la semana:</string>
+    <string name="back">Anterior</string>
+    <string name="next">Siguiente</string>
 </resources>
