Added a Dialog to Add new moods Fixed Profile Screen UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,7 @@
     <string name="journal">Journal</string>
     <string name="my_moods">My Moods</string>
     <string name="my_trackers">My Trackers</string>
+    <string name="add_mood">Add Mood</string>
+    <string name="add_tracker">Add Tracker</string>
+    <string name="missing_info">* Some information is missing</string>
 </resources>
