--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -26,4 +26,7 @@
     <string name="journal">Diario</string>
     <string name="my_moods">Mis Estados de Ánimo</string>
     <string name="my_trackers">Mis Registros</string>
+    <string name="add_mood">Agregar Estado de Ánimo</string>
+    <string name="add_tracker">Agregar Registro</string>
+    <string name="missing_info">* No tengo información suficiente</string>
 </resources>
